# stat362-fa25-final-gaming-sentiment-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_prep.ipynb  02_mlp.ipynb  02_simple_baseline.ipynb  03_mlp.ipynb  04_rnn_models.ipynb  05_distilbert.ipynb  1.5_simple_baseline.ipynb
notebooks/results/metrics/: baseline_results.json  mlp_results.json
