[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaming-sentiment-analysis"
version = "1.0.0"
description = "A comprehensive machine learning project analyzing sentiment in video game reviews using multiple model architectures"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "STAT 362 Student", email = "student@example.com"}
]
keywords = ["machine-learning", "sentiment-analysis", "nlp", "deep-learning", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic"
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tensorflow>=2.15.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.20.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "ipykernel>=6.20.0"
]

colab = [
    "google-colab",
    "google-api-python-client"
]

visualization = [
    "plotly>=5.0.0",
    "wordcloud>=1.9.0"
]

all = [
    "gaming-sentiment-analysis[dev,colab,visualization]"
]

[project.urls]
Homepage = "https://github.com/13eth-a/gaming-sentiment-analysis"
Repository = "https://github.com/13eth-a/gaming-sentiment-analysis"
Issues = "https://github.com/13eth-a/gaming-sentiment-analysis/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tensorflow.*",
    "torch.*",
    "transformers.*",
    "sentence_transformers.*",
    "datasets.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*"
]
ignore_missing_imports = true